force-app/main/default/objects/InstallationSettings__c/InstallationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for the installation service</description>
    <label>PORSA Installation Settings</label>
</CustomObject>