force-app/main/default/objects/InstallationSettings__c/fields/bccDevelopers__c.field-meta.xml
<CustomField>
    <fullName>bccDevelopers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Developers will appear on Bcc on all Installation Emails</description>
    <label>Bcc Developers</label>
    <type>Checkbox</type>
</CustomField>