force-app/main/default/objects/InstallationSettings__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <inlineHelpText>Use ** as default country</inlineHelpText>
    <label>Country</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>