force-app/main/default/objects/InstallationSettings__c/fields/skipSOW__c.field-meta.xml
<CustomField>
    <fullName>skipSOW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skips the Scope of the Works question</description>
    <label>Skip SOW</label>
    <type>Checkbox</type>
</CustomField>